Adjust project cards to ensure content remains on one line on mobile

--- a/styles/_projectCard.scss
+++ b/styles/_projectCard.scss
@@ -16,6 +16,9 @@
       width: 100%;
       margin: $size-sm 0 ;
     }
+    p {
+      font-size: 1rem;
+    }
     .techStack {
       margin-bottom: $size-sm;
       .col {
@@ -26,6 +29,23 @@
           margin: auto;
           &.passive {
             fill-opacity: 0.4;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 575px) {
+  .projectPreviewCard {
+    .projectPreviewCardInner {
+      p {
+        font-size: 0.85rem;
+      }
+      .techStack {
+        .col {
+          svg {
+            height: $size-s;
           }
         }
       }
